@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclIntDecls.h,v 1.49.2.4 2004/06/05 17:25:40 kennykb Exp $
+ * RCS: @(#) $Id: tclIntDecls.h,v 1.49.2.5 2004/06/10 17:17:43 andreas_kupries Exp $
  */
 
 #ifndef _TCLINTDECLS
