@@ -9,7 +9,7 @@
  * Copyright (c) 1998-1999 by Scriptics Corporation.
  * All rights reserved.
  *
- * RCS: @(#) $Id: tclIntPlatDecls.h,v 1.19.2.4 2004/06/05 17:25:40 kennykb Exp $
+ * RCS: @(#) $Id: tclIntPlatDecls.h,v 1.19.2.5 2004/06/10 17:17:44 andreas_kupries Exp $
  */
 
 #ifndef _TCLINTPLATDECLS
