@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclStubInit.c,v 1.79.2.6 2004/06/05 17:25:40 kennykb Exp $
+ * RCS: @(#) $Id: tclStubInit.c,v 1.79.2.7 2004/06/10 17:17:45 andreas_kupries Exp $
  */
 
 #include "tclInt.h"
